--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
 .App {
   text-align: center;
+  /* max-width: 1100px; */
+  margin: auto;
+  overflow: auto;
+  /* padding: 0 2rem; */
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+.gray-back {
+  background-color: #eceae8;
+  width: 80vw;
+  height: 30vh;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.pink-back {
+  background-color: rgb(245, 110, 110);
+  width: 400px;
+  height: 500px;
+  padding: 20px;
+  margin: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+.blue-back {
+  background-color: rgb(66, 38, 226);
+  width: 600px;
+  height: 500px;
+  padding: 20px;
+  margin: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fullscreenImg {
+  /* border: 10px solid red; */
+  /* Full height */
+  height: 100vh;
+  width: 100vw;
+  aspect-ratio: 16 / 9;
+  /* Center and scale the image nicely */
+  /* background-position: center;
+  background-repeat: no-repeat; */
+  background-size: cover;
+}
+.bg {
+  /* border: 10px solid pink;
+  width: 100vw;
+  height: 100vh;
+  background-image: url(https://twimg0-a.akamaihd.net/a/1350072692/t1/img/front_page/jp-mountain@2x.jpg);
+  background-size: cover; */
+  /* background-attachment: fixed; */
+  /* margin: 0; */
+  /* padding: 0; */
 }
