--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,13 @@
   margin-left: auto;
   margin-right: auto;
 }
+.alternate-gray-back {
+  background-color: #eceae8;
+  width: 50vw;
+  height: 60vh;
+  z-index: -100;
+  position: relative;
+}
 .pink-back {
   background-color: rgb(245, 110, 110);
   width: 400px;
