--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,32 @@
 .alternate-gray-back {
   background-color: #eceae8;
   width: 50vw;
-  height: 60vh;
+  height: 100vh;
   z-index: -100;
   position: relative;
+  border: 1px solid rebeccapurple;
+  position: absolute;
+  margin-top: 300px;
+  /* animation: grow-left 1s ease forwards; */
+  /* transform: scaleX(0); */
+  /* transform-origin: left; */
+  /* animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 1s forwards; */
+  /* animation-delay: 0.4s; */
 }
+.outsideGrayDiv {
+  animation: grow-left 2s ease-in-out forwards;
+}
+@keyframes grow-left {
+  0% {
+    transform: scaleX(0%);
+    transform-origin: left;
+  }
+  100% {
+    transform: scaleX(1);
+    /* translate3d: (100%, 100%, 1); */
+  }
+}
+
 .pink-back {
   background-color: rgb(245, 110, 110);
   width: 400px;
@@ -46,7 +68,7 @@
   margin: 20px;
 }
 .blue-back {
-  background-color: rgb(66, 38, 226);
+  background-color: #001a66;
   width: 600px;
   height: 500px;
   padding: 20px;
@@ -58,10 +80,22 @@
   height: 100vh;
   width: 100vw;
   aspect-ratio: 16 / 9;
+  animation: hero 4s ease forwards;
   /* Center and scale the image nicely */
   /* background-position: center;
   background-repeat: no-repeat; */
   background-size: cover;
+  animation: hero 4s ease forwards;
+  /* transform: scale(2);
+  transition: 5s forwards; */
+}
+@keyframes hero {
+  0% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 .bg {
   /* border: 10px solid pink;
@@ -78,7 +112,7 @@ img {
 }
 .filmWheelAndAboutMe {
   display: flex;
-  /* border: 3px solid blue; */
+  border: 3px solid black;
   justify-content: space-around;
   margin-bottom: 100px;
   text-align: left;
@@ -110,4 +144,13 @@ div {
 }
 .oswald {
   font-family: oswald;
+}
+.secondImage {
+  /* border: 2px solid red; */
+  width: 60%;
+  margin-top: 200px;
+}
+main {
+  border: 1px solid blue;
+  position: relative;
 }
