--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -7,7 +7,7 @@
   z-index: 50;
   position: fixed;
   height: 110px;
-}
+} */
 .navbar__logo {
   font-size: 1rem;
   cursor: pointer;
