--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   text-align: center;
   /* max-width: 1100px; */
   margin: auto;
-  overflow: auto;
+  overflow: hidden;
   position: relative;
 
   /* padding: 0 2rem; */
